Combine dustin and fraud html examples into danger_classroom.html

--- a/src/templates/index_fraud.html
+++ b/src/templates/index_fraud.html
@@ -57,16 +57,183 @@
       </div>
     </div>
 <h1>Fraud Database Query</h1>
-    <div>
+
+
+<div class="container">
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      <h1 class="page-header">Disengagement Index</h1>
+
+      <!-- <h2 class="sub-header">Clients disengaging</h2> -->
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Class Id</th>
+              <th>Name</th>
+              <th>Out for:</th>
+              <th>Stalled at:</th>
+              <th>Analytics</th>
+              <th>Heart Rating</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr data-toggle="collapse" data-target="#Row1" class="clickable">
+              <td>001</td>
+              <td>Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall</td>
+              <td>6 weeks, 3 days</td>
+              <td>1st Tutorial</td>
+              <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
+              <td>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="12">
+              <div class="collapse" id="Row1">
+                <div class="card" style="width: 54rem;">
+                  <img class="card-img-top" src="https://placeimg.com/500/180/people/grayscale" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Hidden by default</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+                <div id="Row1" class="collapse">Hidden by default</div>
+              </div>
+            </td>
+            </tr>
+            <tr data-toggle="collapse" data-target="#Row2" class="clickable">
+              <td>002</td>
+              <td>Kesuke Miyagi</td>
+              <td>9 weeks</td>
+              <td>10th Tutorial</td>
+                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
+              <td>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="12">
+                <div class="collapse col-sm-6 col-md-6 col-xs-6" id="Row2">
+                  <div class="thumbnail" style="border:none; background:white;">
+                    <div class="col-sm-6 col-md-6 col-xs-12 image-container">
+                      <img src="https://placeimg.com/50/50/people/grayscale" style="height:200px; margin-left:-15px;" />
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-xs-12">
+                      <h3>Hello World</h3>
+                      <p style="font-size:10px; color:#03225C;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa.   </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- <div id="Row2" class="collapse">Hidden by default</div> -->
+              </td>
+            </tr>
+            <tr data-toggle="collapse" data-target="#Row3" class="clickable">
+              <td>003</td>
+              <td>John Keating</td>
+              <td>4 weeks</td>
+              <td>3rd Tutorial</td>
+                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
+              <td>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="3">
+                <div id="Row3" class="collapse">Hidden by default</div>
+              </td>
+            </tr>
+            <tr data-toggle="collapse" data-target="#Row5" class="clickable">
+              <td>004</td>
+              <td>Charles Xavier</td>
+              <td>2 weeks, 6 days</td>
+              <td>1st Tutorial</td>
+                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
+              <td>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="3">
+                <div id="Row5" class="collapse">Hidden by default</div>
+              </td>
+            </tr>
+            <tr data-toggle="collapse" data-target="#Row6" class="clickable">
+              <td>005</td>
+              <td>Sean Maguire</td>
+              <td>3 weeks, 3 days</td>
+              <td>6th Tutorial</td>
+                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
+              <td>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+
+              </td>
+            </tr>
+            <tr>
+              <td colspan="3">
+                <div id="Row6" class="collapse">Hidden by default</div>
+              </td>
+            </tr>
+            <tr data-toggle="collapse" data-target="#Row7" class="clickable">
+              <td>006</td>
+              <td>George Feeny</td>
+              <td>15 weeks</td>
+              <td>2nd Tutorial</td>
+                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
+              <td>
+                <i class="fas fa-heart"></i>
+
+              </td>
+            </tr>
+            <tr>
+              <td colspan="3">
+                <div id="Row7" class="collapse">Hidden by default</div>
+              </td>
+            </tr>
+            <tr data-toggle="collapse" data-target="#Row8" class="clickable">
+              <td>007</td>
+              <td>Glenn Holland</td>
+              <td>7 weeks, 3 days</td>
+              <td>5th Tutorial</td>
+                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
+              <td>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart"></i>
+
+              </td>
+            </tr>
+            <tr>
+              <td colspan="3">
+                <div id="Row8" class="collapse">Hidden by default</div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+    <!-- <div>
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
       <div class ="row mt-5"></div>
       <div class="row">
         <div class="col-md-4">
           <h3>Single Event ID</h3>
-        <p>Enter a single sequence id to retrieve one event from the database.</p>          
+        <p>Enter a single sequence id to retrieve one event from the database.</p>
         <input id="single_event" />
         <button type="button" id="retrieve_id">Retrieve</button>
         <p><span id="single_result"></span></p>
@@ -76,7 +243,7 @@
        </div>
         <div class="col-md-4">
           <h3>Highest Exposure</h3>
-        <p>Retrieve <i>N</i> number of events with the highest fraud exposure.</p>          
+        <p>Retrieve <i>N</i> number of events with the highest fraud exposure.</p>
         <input id="highest_exposure" />
         <button type="button" id="retrieve_highest">Retrieve</button>
         <p><span id="many_results"></span></p>
@@ -95,7 +262,7 @@
             <div class="col-md-8 text-center"><p><span id="results"></span></p></div>
             <div class="col-md-2"></div>
         </div>
-      </div>
+      </div> -->
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -167,7 +334,7 @@
 </html>
 
 
-<!-- 
+<!--
 <!DOCTYPE html>
 <html>
 <head>
