--- a/src/templates/index_classrooms_in_danger.html
+++ b/src/templates/index_classrooms_in_danger.html
@@ -65,6 +65,9 @@
         <table class="table table-striped">
           <thead>
             <tr>
+              {% for title in columns %}
+              <th>{{title}}</th>
+              {% endfor %}
               <th>Class Id</th>
               <th>Name</th>
               <th>Out for:</th>
@@ -74,8 +77,16 @@
             </tr>
           </thead>
           <tbody>
-            {% for x, y in data %}  <!--start for loop over variable data-->
+            {% for row in data %}  <!--start for loop over variable data-->
             <tr data-toggle="collapse" data-target="#Row1" class="clickable">
+              {% for col_item in row %}
+              <td>{{col_item}}</td>
+
+              {% endfor %}
+
+            </tr>
+            {% endfor %}
+              <tr data-toggle="collapse" data-target="#Row1" class="clickable">
               <td>001</td>
               <td>{{ x }}</td>    <!-- write variable x -->
               <td>{{ y }}</td>    <!-- write variable y -->
@@ -87,9 +98,7 @@
                 <i class="fas fa-heart"></i>
                 <i class="fas fa-heart"></i>
               </td>
-            </tr>
-
-            {% endfor %}            <!-- end for loop -->
+            </tr>         <!-- end for loop -->
             <tr>
               <td colspan="12">
               <div class="collapse" id="Row1">
