--- a/src/templates/index_classrooms_in_danger.html
+++ b/src/templates/index_classrooms_in_danger.html
@@ -14,38 +14,9 @@
   </head>
   <body>
 
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">TClassrooms in Danger</a>
- <!--      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button> -->
-
-<!--       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
- -->    </nav>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">TClassrooms in Danger</a>
+  </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
@@ -56,6 +27,34 @@
         <p>Use this application to determine which classes need intervention: weather it be email, offers, or otherwise.</p>
       </div>
     </div>
+    <h1>Search classrooms</h1>
+    <p>Please enter the classroom id below:</p>
+    <div>
+        <!-- These have id's so that later we can pull out data using js. -->
+        <span>classroom_id:</span> <input id="classroom_id"></input>
+    </div>
+    <div>
+        <button type="button" id="search">Search</button>
+    </div>
+
+    <h1>The DSI Quadratic Equation Solver</h1>
+    <p>This app will solve quadratic equations for you!</p>
+    <p>Please enter the coefficients below!</p>
+    <div>
+        <!-- These have id's so that later we can pull out data using js. -->
+        <span>a:</span> <input id="a"></input>
+        <span>b:</span> <input id="b"></input>
+        <span>c:</span> <input id="c"></input>
+    </div>
+
+    <div>
+        <button type="button" id="solve">Solve!</button>
+    </div>
+
+    <div>
+        <!-- The span has an id so that later we can fill in the solution
+             using js. -->
+    <p> The solution is: <span id="solution"></span> </p>
 
 <div class="container">
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -234,96 +233,72 @@
     </div>
   </div>
 </div>
-    <!-- <div>
-    </div>
 
-    <div class="container">
-      <div class ="row mt-5"></div>
-      <div class="row">
-        <div class="col-md-4">
-          <h3>Single Event ID</h3>
-        <p>Enter a single sequence id to retrieve one event from the database.</p>
-        <input id="single_event" />
-        <button type="button" id="retrieve_id">Retrieve</button>
-        <p><span id="single_result"></span></p>
-        </div>
-        <div class="col-md-4 text-center">
-          <h2>Or</h2>
-       </div>
-        <div class="col-md-4">
-          <h3>Highest Exposure</h3>
-        <p>Retrieve <i>N</i> number of events with the highest fraud exposure.</p>
-        <input id="highest_exposure" />
-        <button type="button" id="retrieve_highest">Retrieve</button>
-        <p><span id="many_results"></span></p>
-        </div>
-      </div>
-      <hr>
-      </div>
-      <div class="container">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <table class="blueTable">
-              <tbody>
-                <tr><th>Case ID</th><th>Sequence #</th><th>Name</th><th>HTML</th><th>Ticket Quant.</th><th>Ticket Val</th><th>Fraud Probability</th><th>Fraud Exp.</th></tr>
-              </tbody>
-            </table>
-            <div class="col-md-8 text-center"><p><span id="results"></span></p></div>
-            <div class="col-md-2"></div>
-        </div>
-      </div> -->
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}">  </script>
 <script type="text/javascript">
-    get_single_inputs = function () {
-        let single = $("input#single_event").val()
-        return {'single_id': single}
-    };
-    get_highest_inputs = function () {
-        let highest_exp = $("input#highest_exposure").val()
-        return {'highest_exp': highest_exp}
-    };
-    let send_inputs_json = function (inputs) {
-        $.ajax({
-            url: '/predict',
-            contentType: "application/json; charset=utf-8",
-            type: 'POST',
-            success: function(data) {
-                display_results(data);
-            },
-            data: JSON.stringify(inputs)
-        });
-    };
-    let display_results = function(results) {
-        $('table.blueTable').empty();
-        $('table.blueTable').append("<tr><th>Case ID</th><th>Sequence #</th><th>Name</th><th>HTML</th><th>Ticket Quant.</th><th>Ticket Val</th><th>Fraud Probability</th><th>Fraud Exp.</th></tr>");
-        var inputs = JSON.parse(results.inputs);
-        for (var i = 0; i < inputs.length; i++) {
-          tr = $('<tr/>');
-          tr.append("<td>" + inputs[i].case_id + "</td>");
-          tr.append("<td>" + inputs[i].sequence_number + "</td>");
-          tr.append("<td>" + inputs[i].event_name + "</td>");
-          tr.append("<td>" + "<a href={{link}} " + "id=html" + i + ">HTML</a>" + "</td>");
-          tr.append("<td>" + inputs[i].ticket_quantity + "</td>");
-          tr.append("<td>" + inputs[i].ticket_value + "</td>");
-          tr.append("<td>" + inputs[i].fraud_probability + "</td>");
-          tr.append("<td>" + inputs[i].fraud_exposure + "</td>");
-          $("table.blueTable").append(tr);
-        };
-    };
-    $(document).ready(function(){
-        $("button#retrieve_id").click(function(){
-            let inputs = get_single_inputs();
-            send_inputs_json(inputs);
-        })
-        $("button#retrieve_highest").click(function(){
-            let inputs = get_highest_inputs();
-            send_inputs_json(inputs);
-        })
+
+let get_classroom_id = function() {
+    let classroom_id = $("input#classroom_id").val()
+    return {'classroom_id': parseInt(classroom_id),}
+};
+
+let get_input_coefficients = function() {
+    let a = $("input#a").val()
+    let b = $("input#b").val()
+    let c = $("input#c").val()
+    return {'a': parseInt(a),
+            'b': parseInt(b),
+            'c': parseInt(c)}
+};
+
+let send_classroom_id_json = function(coefficients) {
+    $.ajax({
+        url: '/search',
+        contentType: "application/json; charset=utf-8",
+        type: 'POST',
+        success: function (data) {
+            display_solutions(data);
+        },
+        data: JSON.stringify(coefficients)
+    });
+};
+
+let send_coefficient_json = function(coefficients) {
+    $.ajax({
+        url: '/solve',
+        contentType: "application/json; charset=utf-8",
+        type: 'POST',
+        success: function (data) {
+            display_solutions(data);
+        },
+        data: JSON.stringify(coefficients)
+    });
+};
+
+let display_solutions = function(solutions) {
+    $("span#solution").html(solutions.root_1 + " and " + solutions.root_2)
+};
+
+let display_solutions = function(solutions) {
+    $("span#solution").html(solutions.root_1 + " and " + solutions.root_2)
+};
+
+$(document).ready(function() {
+  $("button#search").click(function() {
+      let classroom_id = get_classroom_id();
+      send_classroom_id_json(classroom_id);
+  })
+    $("button#solve").click(function() {
+        let coefficients = get_input_coefficients();
+        send_coefficient_json(coefficients);
     })
+
+})
 </script>
 </body>
 
