--- a/src/templates/index_classrooms_in_danger.html
+++ b/src/templates/index_classrooms_in_danger.html
@@ -36,6 +36,7 @@
     <div>
         <button type="button" id="search">Search</button>
     </div>
+    <p> The solution is: <span id="search"></span> </p>
 
     <h1>The DSI Quadratic Equation Solver</h1>
     <p>This app will solve quadratic equations for you!</p>
@@ -46,11 +47,9 @@
         <span>b:</span> <input id="b"></input>
         <span>c:</span> <input id="c"></input>
     </div>
-
     <div>
         <button type="button" id="solve">Solve!</button>
     </div>
-
     <div>
         <!-- The span has an id so that later we can fill in the solution
              using js. -->
@@ -262,7 +261,7 @@ let send_classroom_id_json = function(coefficients) {
         contentType: "application/json; charset=utf-8",
         type: 'POST',
         success: function (data) {
-            display_solutions(data);
+            display_search(data);
         },
         data: JSON.stringify(coefficients)
     });
@@ -280,8 +279,8 @@ let send_coefficient_json = function(coefficients) {
     });
 };
 
-let display_solutions = function(solutions) {
-    $("span#solution").html(solutions.root_1 + " and " + solutions.root_2)
+let display_search = function(result) {
+    $("span#search").html(result.classroom_id)
 };
 
 let display_solutions = function(solutions) {
@@ -293,10 +292,10 @@ $(document).ready(function() {
       let classroom_id = get_classroom_id();
       send_classroom_id_json(classroom_id);
   })
-    $("button#solve").click(function() {
-        let coefficients = get_input_coefficients();
-        send_coefficient_json(coefficients);
-    })
+  $("button#solve").click(function() {
+      let coefficients = get_input_coefficients();
+      send_coefficient_json(coefficients);
+  })
 
 })
 </script>
