--- a/src/templates/index_classrooms_in_danger.html
+++ b/src/templates/index_classrooms_in_danger.html
@@ -9,8 +9,8 @@
     <title>TClassrooms in Danger</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">    <!-- Custom styles for this template -->
-    <link rel="stylesheet" type="text/css" href="../static/css/table.css">
+    <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">    <!-- Custom styles for this template --> -->
+    <!-- <link rel="stylesheet" type="text/css" href="../static/css/table.css"> -->
   </head>
   <body>
 
@@ -30,13 +30,13 @@
     <h1>Search classrooms</h1>
     <p>Please enter the classroom id below:</p>
     <div>
-        <!-- These have id's so that later we can pull out data using js. -->
-        <span>classroom:</span> <input id="classroom_id"></input>
+    <span>classroom:</span> <input id="classroom_id"></input>
     </div>
     <div>
         <button type="button" id="search">Search</button>
     </div>
-    <p> The solution is: <span id="class"></span> </p>
+    <p> The solution is: <span id="searched_class_columns"></span> </p>
+    <p> The solution is: <span id="searched_class"></span> </p>
 
     <h1>The DSI Quadratic Equation Solver</h1>
     <p>This app will solve quadratic equations for you!</p>
@@ -66,12 +66,6 @@
               {% for title in columns %}
               <th>{{title}}</th>
               {% endfor %}
-              <th>Class Id</th>
-              <th>Name</th>
-              <th>Out for:</th>
-              <th>Stalled at:</th>
-              <th>Analytics</th>
-              <th>Heart Rating</th>
             </tr>
           </thead>
           <tbody>
@@ -84,148 +78,6 @@
 
             </tr>
             {% endfor %}
-              <tr data-toggle="collapse" data-target="#Row1" class="clickable">
-              <td>001</td>
-              <td>Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall, Minerva McGonagall</td>
-              <td>6 weeks, 3 days</td>
-              <td>1st Tutorial</td>
-              <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
-              <td>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-              </td>
-            </tr>         <!-- end for loop -->
-            <tr>
-              <td colspan="12">
-              <div class="collapse" id="Row1">
-                <div class="card" style="width: 54rem;">
-                  <img class="card-img-top" src="https://placeimg.com/500/180/people/grayscale" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Hidden by default</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-                <div id="Row1" class="collapse">Hidden by default</div>
-              </div>
-            </td>
-            </tr>
-            <tr data-toggle="collapse" data-target="#Row2" class="clickable">
-              <td>002</td>
-              <td>Kesuke Miyagi</td>
-              <td>9 weeks</td>
-              <td>10th Tutorial</td>
-                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
-              <td>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="12">
-                <div class="collapse col-sm-6 col-md-6 col-xs-6" id="Row2">
-                  <div class="thumbnail" style="border:none; background:white;">
-                    <div class="col-sm-6 col-md-6 col-xs-12 image-container">
-                      <img src="https://placeimg.com/50/50/people/grayscale" style="height:200px; margin-left:-15px;" />
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-xs-12">
-                      <h3>Hello World</h3>
-                      <p style="font-size:10px; color:#03225C;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa.   </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- <div id="Row2" class="collapse">Hidden by default</div> -->
-              </td>
-            </tr>
-            <tr data-toggle="collapse" data-target="#Row3" class="clickable">
-              <td>003</td>
-              <td>John Keating</td>
-              <td>4 weeks</td>
-              <td>3rd Tutorial</td>
-                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
-              <td>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="3">
-                <div id="Row3" class="collapse">Hidden by default</div>
-              </td>
-            </tr>
-            <tr data-toggle="collapse" data-target="#Row5" class="clickable">
-              <td>004</td>
-              <td>Charles Xavier</td>
-              <td>2 weeks, 6 days</td>
-              <td>1st Tutorial</td>
-                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
-              <td>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="3">
-                <div id="Row5" class="collapse">Hidden by default</div>
-              </td>
-            </tr>
-            <tr data-toggle="collapse" data-target="#Row6" class="clickable">
-              <td>005</td>
-              <td>Sean Maguire</td>
-              <td>3 weeks, 3 days</td>
-              <td>6th Tutorial</td>
-                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
-              <td>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-
-              </td>
-            </tr>
-            <tr>
-              <td colspan="3">
-                <div id="Row6" class="collapse">Hidden by default</div>
-              </td>
-            </tr>
-            <tr data-toggle="collapse" data-target="#Row7" class="clickable">
-              <td>006</td>
-              <td>George Feeny</td>
-              <td>15 weeks</td>
-              <td>2nd Tutorial</td>
-                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
-              <td>
-                <i class="fas fa-heart"></i>
-
-              </td>
-            </tr>
-            <tr>
-              <td colspan="3">
-                <div id="Row7" class="collapse">Hidden by default</div>
-              </td>
-            </tr>
-            <tr data-toggle="collapse" data-target="#Row8" class="clickable">
-              <td>007</td>
-              <td>Glenn Holland</td>
-              <td>7 weeks, 3 days</td>
-              <td>5th Tutorial</td>
-                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fas fa-chart-line"></i></button></td>
-              <td>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-
-              </td>
-            </tr>
-            <tr>
-              <td colspan="3">
-                <div id="Row8" class="collapse">Hidden by default</div>
-              </td>
-            </tr>
           </tbody>
         </table>
       </div>
@@ -237,10 +89,13 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}">  </script>
-<script type="text/javascript">
+<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
+<!-- <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}">  </script> -->
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
+<!-- <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script> -->
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
 
+<script type="text/javascript">
 let get_classroom_id = function() {
     let classroom_id = $("input#classroom_id").val()
     return {'classroom_id': parseInt(classroom_id),}
@@ -280,26 +135,42 @@ let send_coefficient_json = function(coefficients) {
 };
 
 let display_search = function(result) {
-    $("span#class").html(makeUL(result.classroom_stat))
-    $("span#class").html(makeUL(result.stat_labels))
+    $("span#searched_class").html(makeUL(result.classroom_stat))
+    // $("span#searched_class_columns").html(result.stat_labels)
+    $("span#searched_class_columns").html(make_table(result.classroom_stat, ['a','b'])) // result.stat_labels))
 };
+
+function make_table(array, columns) {
+    var table = document.createElement('table');
+    var thead = document.createElement('thead');
+    var tr = document.createElement('tr');
+    thead.appendChild(tr);
+    for(var i = 0; i < columns.length; i++) {
+        var item = document.createElement('th');
+        item.appendChild(document.createTextNode(columns[i]));
+        tr.appendChild(item);
+    }
+    var tbody = document.createElement(tbody);
+    var tr2 = document.createElement('tr');
+    thead.appendChild(tr2);
+    for(var i = 0; i < array.length; i++) {
+        var item = document.createElement('th');
+        item.appendChild(document.createTextNode(array[i]));
+        tr2.appendChild(item);
+    }
+    table.appendChild(thead);
+    table.appendChild(tbody);
+    return table;
+}
 
 function makeUL(array) {
     // Create the list element:
     var list = document.createElement('ul');
-
     for(var i = 0; i < array.length; i++) {
-        // Create the list item:
         var item = document.createElement('li');
-
-        // Set its contents:
         item.appendChild(document.createTextNode(array[i]));
-
-        // Add it to the list:
         list.appendChild(item);
     }
-
-    // Finally, return the constructed list:
     return list;
 }
 
