--- a/src/templates/index_classrooms_in_danger.html
+++ b/src/templates/index_classrooms_in_danger.html
@@ -9,7 +9,7 @@
     <title>TClassrooms in Danger</title>
 
     <!-- Bootstrap core CSS -->
-    <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">    <!-- Custom styles for this template --> -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">    <!-- Custom styles for this template -->
     <!-- <link rel="stylesheet" type="text/css" href="../static/css/table.css"> -->
   </head>
   <body>
@@ -31,7 +31,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
     <div class="container">
-      <h1>Bootstrap 3 DataTables</h1>
+      <h1>Top 100 defecting classrooms</h1>
       <table id="example" class="table table-striped table-bordered table-hover" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -55,7 +55,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/dataTables.bootstrap.min.js"></script>
 
-    <h1>Search classrooms</h1>
+    <h1>Search all classrooms</h1>
     <p>Please enter the classroom id below:</p>
     <div>
       <span>classroom:</span> <input id="classroom_id"></input>
@@ -64,36 +64,6 @@
         <button type="button" id="search">Search</button>
     </div>
     <span id="searched_class_columns"></span>
-
-<div class="container">
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <h1 class="page-header">Disengagement Index</h1>
-      <!-- <h2 class="sub-header">Clients disengaging</h2> -->
-      <div class="table-responsive">
-        <table class="table table-striped blueTable">
-          <thead>
-            <tr>
-              {% for title in columns %}
-              <th>{{title}}</th>
-              {% endfor %}
-            </tr>
-          </thead>
-          <tbody>
-            {% for row in data %}  <!--start for loop over variable data-->
-            <tr data-toggle="collapse" data-target="#Row1" class="clickable">
-              {% for col_item in row %}
-              <td>{{col_item}}</td>
-
-              {% endfor %}
-
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
