--- a/src/templates/index_classrooms_in_danger.html
+++ b/src/templates/index_classrooms_in_danger.html
@@ -35,14 +35,16 @@
       <table id="example" class="table table-striped table-bordered table-hover" cellspacing="0" width="100%">
         <thead>
           <tr>
+            <th>Posts</th>
             {% for title in columns %}
-            <th>{{title}}</th>
+            <th scope="row">{{title}}</th>
             {% endfor %}
           </tr>
         </thead>
         <tbody>
           {% for row in data %}  <!--start for loop over variable data-->
           <tr>
+            <td><img class="img" src='https://s3-us-west-2.amazonaws.com/sparklines/sparklines/sparkline_{{1000}}_thumb.png' alt="" style="width:200px; height:auto;"></td>
             {% for col_item in row %}
             <td>{{col_item}}</td>
             {% endfor %}
@@ -54,6 +56,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/dataTables.bootstrap.min.js"></script>
+
+
+    <img src='../../img/sparklines/sparkline_1.png'>
+    <img src='https://s3-us-west-2.amazonaws.com/sparklines/sparklines/sparkline_1.png'>
+    <img src='https://s3-us-west-2.amazonaws.com/sparklines/sparklines/sparkline_thumb_1000.png'>
 
     <h1>Search all classrooms</h1>
     <p>Please enter the classroom id below:</p>
