--- a/src/templates/index_classrooms_in_danger.html
+++ b/src/templates/index_classrooms_in_danger.html
@@ -4,12 +4,12 @@
   .zoom {
       transition: transform .2s; /* Animation */
       width: 200px;
-      height: 40px;
+      height: 30px;
       margin: 0 auto;
   }
 
   .zoom:hover {
-      transform: scale(4); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+      transform: scale(6); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
   </style>
   <head>
@@ -58,6 +58,7 @@
           <tr>
             <td>
             <img class="zoom" src="https://s3-us-west-2.amazonaws.com/sparklines/sparklines/sparkline_{{1}}.png">
+            <img class="zoom" src="https://s3-us-west-2.amazonaws.com/sparklines/sparklines/sparkline_{{row[0]}}.png">
             </td>
             {% for col_item in row %}
             <td>{{col_item}}</td>
