--- a/src/templates/index_classrooms_in_danger.html
+++ b/src/templates/index_classrooms_in_danger.html
@@ -57,8 +57,17 @@
           {% for row in data %}  <!--start for loop over variable data-->
           <tr>
             <td>
-            <img class="zoom" src="https://s3-us-west-2.amazonaws.com/sparklines/sparklines/sparkline_{{1}}.png">
-            <img class="zoom" src="https://s3-us-west-2.amazonaws.com/sparklines/sparklines/sparkline_{{row[0]}}.png">
+            <!-- FAKE DATA -->
+            <img class="zoom" src="https://s3-us-west-2.amazonaws.com/sparklines/sparklines/sparkline_{{[ 96, 117,  28,  57,  52,  45,  79, 126,  92,  86,  59,  25,  51,
+        47,  84,  80, 132,  37,  18, 129, 110,  94,  22,  32, 130,  49,
+        88,  70,  39,  44,  83, 136,  15,  33,  35,  36, 128, 113,  42,
+        23,  66,  73,  50,  53, 127,  31, 120,  90,  55,  21,  71,  75,
+        16,  74,  19, 108,  93,  60,  43,  24, 105, 124, 125,  97,  38,
+        41,  46,  91, 134,  76,   4,  82,  58, 112, 115, 114, 135,  89,
+        54, 118,  87,  77,   3, 123,  95, 111,  85,  72,  30, 119,   1,
+        34,  56, 121, 106, 122, 109,  68, 107, 131, 133, 116][loop.index0]}}.png">
+            <!-- GETS ACTUAL DATA -->
+            <!-- <img class="zoom" src="https://s3-us-west-2.amazonaws.com/sparklines/sparklines/sparkline_{{row[0]}}.png"> -->
             </td>
             {% for col_item in row %}
             <td>{{col_item}}</td>
